--- a/app/globals.css
+++ b/app/globals.css
@@ -2,3 +2,13 @@
 
 @config "../tailwind.config.js";
 @import "tailwindcss";
+
+@layer base {
+  h1 {
+    @apply text-h1 font-header;
+  }
+
+  p {
+    @apply text-primary;
+  }
+}
