got the front hero page statically viewable with tailwind :D

--- a/app/globals.css
+++ b/app/globals.css
@@ -9,6 +9,13 @@
   }
 
   p {
-    @apply text-primary;
+    @apply text-primary text-supplement-white;
+  }
+
+  a {
+    @apply text-primary-white;
+  }
+  a:hover {
+    @apply text-vibrant-red;
   }
 }
