--- a/app/globals.css
+++ b/app/globals.css
@@ -24,4 +24,23 @@
   li {
     list-style: circle;
   }
+  input,
+  textarea {
+    @apply border-4 py-1 px-2 rounded-2xl border-dark-blue bg-primary-white text-dark-blue mb-4 min-w-full w-full;
+  }
+  textarea {
+    @apply min-h-44;
+  }
+  @media (min-width: 768px) {
+    input,
+    textarea {
+      @apply min-w-1/2;
+    }
+  }
+  @media (min-width: 1023px) {
+    input,
+    textarea {
+      @apply min-w-1/4;
+    }
+  }
 }
