--- a/app/globals.css
+++ b/app/globals.css
@@ -24,9 +24,12 @@
   li {
     list-style: circle;
   }
+  label {
+    font-size: 1.2em;
+  }
   input,
   textarea {
-    @apply border-4 py-1 px-2 rounded-2xl border-dark-blue bg-primary-white text-dark-blue mb-4 min-w-full w-full;
+    @apply border-4 py-1 px-2 rounded-2xl border-dark-blue bg-input-grey text-dark-blue mb-1 min-w-full w-full;
   }
   textarea {
     @apply min-h-44;
